# clawathon-agent-2026

./: .dockerignore  .env.example  .gitignore  .greennode.example.json  Dockerfile  README.md  main.py  news_summary_agent.py  pyproject.toml  requirements.txt
tests/: test_news_summary_agent.py
