[project]
name = "clawathon-news-summary-agent"
version = "0.1.0"
description = "GreenNode AgentBase agent that summarizes a news article from a URL."
requires-python = ">=3.10"
dependencies = [
  "greennode-agentbase",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]
